# sound-search

./: .gitignore  README.md
client/: README.md  package.json  tsconfig.web.json
client/src/main/: index.ts
client/src/preload/: index.d.ts  index.ts
client/src/renderer/src/: App.svelte
client/src/renderer/src/components/: Onboarding.svelte  SamplesBrowser.svelte  SearchInterface.svelte  SearchResultCard.svelte
server/: Dockerfile  main.py  pyproject.toml
server/api/: search.py
server/utils/: embeddings.py  preprocessing.py
