[tool.poetry]
name = "sound-search"
version = "0.1.0"
description = ""
authors = ["Dillan Khurana <buzzoo123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
transformers = "^4.50.3"
requests = "^2.32.3"
numpy = "^2.2.4"
scikit-learn = "^1.6.1"
huggingface-hub = "^0.29.3"
torchaudio = "^2.6.0"
slowapi = "^0.1.9"
python-multipart = "^0.0.20"
llvmlite = "^0.44.0"
librosa = "^0.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
